src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
export type NotSubscription = {
  greetings: AsyncIterable<string>;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts:3:14 - error: `AsyncIterable` is not a valid as an input type.

3   greetings: AsyncIterable<string>;
               ~~~~~~~~~~~~~~~~~~~~~
